feat: construcao dos endpoints e estrutura de produto e cliente
