# tooling/swagger/parameters.yaml
@@ -1,19 +1,20 @@
 info:
-  title: Lanchonete API
+  title: Microservico - Cadastros
   version: 1.0.0
   description: Projeto relacionado a especialização em Arquitetura de Software na FIAP
 host: localhost:7000
 servers:
   - url: http://localhost:7000
 basePath: /
-openapi: '3.1.0'
+openapi: 3.1.0
 paths:
   /cliente:
     post:
       description: Incluir um novo cliente
       security:
         - basicAuth: []
-      tags: [Cliente]
+      tags:
+        - Cliente
       produces:
         - application/json
       requestBody:
@@ -24,11 +25,7 @@ paths:
             example:
               nome: João
               sobrenome: Silva
-              cpf: "12345678901"
-      parameters:
-        - $ref: '#/parameters/nomeCliente'
-        - $ref: '#/parameters/sobrenomeCliente'
-        - $ref: '#/parameters/cpfForm'
+              cpf: '12345678901'
       responses:
         '201':
           description: Sucesso
@@ -45,7 +42,8 @@ paths:
       description: Buscar um cliente cadastrado
       security:
         - basicAuth: []
-      tags: [Cliente]
+      tags:
+        - Cliente
       produces:
         - application/json
       parameters:
@@ -66,7 +64,8 @@ paths:
       description: Incluir um novo produto
       security:
         - basicAuth: []
-      tags: [Produto]
+      tags:
+        - Produto
       produces:
         - application/json
       requestBody:
@@ -80,12 +79,6 @@ paths:
               valor: 500
               categoria: lanche
               disponivel: true
-      parameters:
-        - $ref: '#/parameters/nomeProduto'
-        - $ref: '#/parameters/descricaoProduto'
-        - $ref: '#/parameters/valorProduto'
-        - $ref: '#/parameters/tipoProduto'
-        - $ref: '#/parameters/disponivelProduto'
       responses:
         '201':
           description: Sucesso
@@ -97,7 +90,8 @@ paths:
       description: Buscar todos os produtos cadastrados
       security:
         - basicAuth: []
-      tags: [Produto]
+      tags:
+        - Produto
       produces:
         - application/json
       responses:
@@ -117,15 +111,21 @@ paths:
       description: Alterar um produto cadastrado
       security:
         - basicAuth: []
-      tags: [Produto]
+      tags:
+        - Produto
       produces:
         - application/json
-      parameters:
-        - $ref: '#/parameters/nomeProduto'
-        - $ref: '#/parameters/descricaoProduto'
-        - $ref: '#/parameters/valorProduto'
-        - $ref: '#/parameters/tipoProduto'
-        - $ref: '#/parameters/disponivelProduto'
+      requestBody:
+        content:
+          application/json:
+            schema:
+              $ref: '#/definitions/Produto'
+            example:
+              nome: Lanche com hambúrguer
+              descricao: Lanche com hambúrguer, queijo, alface e tomate
+              valor: 500
+              categoria: lanche
+              disponivel: true
       responses:
         '200':
           description: Sucesso
@@ -138,7 +138,8 @@ paths:
       description: Buscar um produto cadastrado
       security:
         - basicAuth: []
-      tags: [Produto]
+      tags:
+        - Produto
       produces:
         - application/json
       parameters:
@@ -162,7 +163,8 @@ paths:
       description: Excluir um produto cadastrado
       security:
         - basicAuth: []
-      tags: [Produto]
+      tags:
+        - Produto
       produces:
         - application/json
       parameters:
@@ -183,7 +185,8 @@ paths:
       description: Buscar todos os produtos de uma categoria
       security:
         - basicAuth: []
-      tags: [Produto]
+      tags:
+        - Produto
       produces:
         - application/json
       parameters:
@@ -205,155 +208,7 @@ paths:
           description: Erro de validação
         '500':
           description: Erro interno
-  /pedido:
-    post:
-      description: Incluir um novo pedido
-      security:
-        - basicAuth: []
-      tags: [Pedido]
-      produces:
-        - application/json
-      requestBody:
-        content:
-          application/json:
-            schema:
-              $ref: '#/definitions/Pedido'
-            example:
-              id_cliente: 12345678901
-      parameters:
-        - $ref: '#/parameters/idCliente'
-      responses:
-        '201':
-          description: Sucesso
-        '400':
-          description: Erro de validação
-        '500':
-          description: Erro interno
-  /pedido/{id}:
-    get:
-      description: Buscar um pedido cadastrado
-      security:
-        - basicAuth: []
-      tags: [Pedido]
-      produces:
-        - application/json
-      parameters:
-        - name: id
-          description: ID do pedido
-          in: path
-          required: true
-          type: string  
-      responses:
-        '200':
-          description: OK
-          content:
-            application/json:
-              schema:
-                  $ref: '#/definitions/Pedido'
-        '400':
-          description: Erro de validação
-        '500':
-          description: Erro interno
-    put:
-      description: Alterar um pedido cadastrado
-      security:
-        - basicAuth: []
-      tags: [Pedido]
-      produces:
-        - application/json
-      requestBody:
-        content:
-          application/json:
-            schema:
-              $ref: '#/definitions/Pedido'
-            example:
-              tipo_pagamento: "pix"
-      parameters:
-        - $ref: '#/parameters/valorTotalPedido'
-        - $ref: '#/parameters/tipoPagamento'
-        - $ref: '#/parameters/statusPedido'
-      responses:
-        '200':
-          description: Sucesso
-        '400':
-          description: Erro de validação
-        '500':
-          description: Erro interno
-  /pedido/{id}/status-pagamento:
-    get:
-      description: Buscar status de pagamento de um pedido cadastrado
-      security:
-        - basicAuth: []
-      tags: [Pedido]
-      produces:
-        - application/json
-      parameters:
-        - name: id
-          description: ID do produto
-          in: path
-          required: true
-          type: string
-      responses:
-        '200':
-          description: OK
-          content:
-            application/json:
-              schema:
-                type: string
-        '400':
-          description: Erro de validação
-        '500':
-          description: Erro interno
-  /pedido/item:
-    post:
-      description: Adicionar item a um pedido
-      security:
-        - basicAuth: []
-      tags: [Pedido]
-      produces:
-        - application/json
-      requestBody:
-        content:
-          application/json:
-            schema:
-              $ref: '#/definitions/Pedido'
-            example:
-              id_pedido: 1
-              id_produto: 1
-              quantidade: 2
-      parameters:
-        - $ref: '#/parameters/idPedido'
-        - $ref: '#/parameters/idProduto'
-        - $ref: '#/parameters/quantidadeItem'
-      responses:
-        '201':
-          description: Sucesso
-        '400':
-          description: Erro de validação
-        '500':
-          description: Erro interno
-  /pedido/status/nao-finalizados:
-    get:
-      description: Buscar todos os pedidos retornando eles com a ordenação de status (Pronto, Em preparação, Recebido), ordenados os mais antigos primeiros e desconsiderando os Finalizados
-      security:
-        - basicAuth: []
-      tags: [Pedido]
-      produces:
-        - application/json
-      responses:
-        '200':
-          description: OK
-          content:
-            application/json:
-              schema:
-                type: array
-                items:
-                  $ref: '#/definitions/Pedido'
-        '400':
-          description: Erro de validação
-        '500':
-          description: Erro interno
-parameters: 
+parameters:
   nomeCliente:
     name: nome
     description: Nome do cliente
@@ -414,48 +269,17 @@ parameters:
     in: body
     required: true
     type: string
-  idPedido:
-    name: id_pedido
-    description: ID do pedido
-    in: body
-    required: true
-    type: string
   idProduto:
     name: id_produto
     description: ID do produto
     in: body
     required: true
     type: string
-  valorTotalPedido:
-    name: valor_total
-    description: Valor total do pedido em centavos
-    in: body
-    required: false
-    type: number
-  quantidadeItem:
-    name: quantidade_item
-    description: Quantidade de itens pedidos
-    in: body
-    required: true
-    type: number
-  tipoPagamento:
-    name: tipo_pagamento
-    description: Tipo do pagamento (pix, cartao debito, cartao credito)
-    in: body
-    required: false
-    type: enum
-  statusPedido:
-    name: status
-    description: Status do pedido (recebido, em preparacao, pronto, finalizado)
-    in: body
-    required: false
-    type: enum
-  
 definitions:
   Cliente:
     type: object
     properties:
-      id: 
+      id:
         type: string
       nome:
         type: string
@@ -480,18 +304,7 @@ definitions:
         type: enum
       disponivel:
         type: boolean
-  Pedido:
-    type: object
-    properties:
-      id_cliente:
-        type: string
-      valor_final:
-        type: number
-      tipo_pagamento:
-        type: enum
-      status:
-        type: enum
-tags: 
+tags:
   - Cliente
-  - Pedido
   - Produto
+components: {}
